# obsidian_multi_vault_search

./: .gitignore  CMakeLists.txt  FileDialog.cpp  FileDialog.h  ImGuiWrapper.cpp  ImGuiWrapper.h  MultiVaultHandler.cpp  MultiVaultHandler.h  MultiVaultSearch.cpp  README.md  imgui_main.cpp  imgui_test.cpp  main.cpp
lib/: CMakeLists.txt
lib/SDL/VisualC/tests/testautomation/: testautomation.vcxproj
